# mlrbench

./: .gitignore  Gemfile  LICENSE  README.md  _config.yml  pyproject.toml  requirements.txt  run_mlr_agent.py  task_metadata.md
human_eval/: Hallucination Check.csv  README.md  compute_agreement_score.ipynb  human_review.csv  llm_judge.csv  merge_data.csv
mlrbench/agent/: claude.sh  codex.sh  experiment_runner.py  idea_generator.py  lit_review.py  paper_writer.py  proposal_generator.py
mlrbench/evals/: eval_hallucination.py  overall_review.py  performance_cost.py  review_experiments.py  review_idea.py  review_proposal.py  review_writeup.py
mlrbench/llm/: llm.py
mlrbench/llm_types/: __init__.py  llm_types.py
mlrbench/lmm/: __init__.py  lmm.py
mlrbench/lmm_types/: __init__.py  (+1 more)
tasks/: iclr2023_bands.md  iclr2023_dg.md  iclr2023_ml4materials.md  iclr2023_mlgh.md  iclr2023_mrl.md  iclr2023_nf.md  iclr2023_physics4ml.md  iclr2023_rrl.md  iclr2023_rtml.md  iclr2023_snn.md  iclr2023_sr4ad.md  iclr2023_tml4h.md  iclr2023_trustml.md  iclr2023_tsrl4h.md  iclr2024_agi.md  iclr2024_al4de.md  iclr2024_bgpt.md  iclr2024_dmlr.md  iclr2024_dpfm.md  iclr2024_gem.md  iclr2024_genai4dm.md  iclr2024_globalai.md  iclr2024_llm4agents.md  iclr2024_mefomo.md  iclr2024_mlgenx.md  iclr2024_pml.md  iclr2024_pml4lrs.md  iclr2024_r2fm.md  iclr2024_realign.md  iclr2024_setllm.md  iclr2024_ts4h.md  iclr2025_agenticai.md  iclr2025_ai4chl.md  iclr2025_ai4mat.md  iclr2025_ai4na.md  iclr2025_delta.md  iclr2025_embodiedai.md  iclr2025_financial_ai.md  iclr2025_fm_wild.md  iclr2025_fpi.md  (+152 more)
(+9277 files in other folders)
