[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlrbench"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1"
dependencies = [
"docker>=7.1",
"dotenv",
"sysbox",
"transformers",
"openai",
"torch>=2.0",
"numpy",
"nbformat",
"nbclient",
"pandas",
"pymupdf",
"pymupdf4llm",
"tqdm",
"matplotlib",
"datasets",
"anthropic",
"opentelemetry-api",
"tiktoken",
"sentencepiece",
"peft",
"scikit-learn",
"tensorflow",
"pillow",
"ipython",
"wandb",
"gpustat",
"opencv-python==4.*",
]

[tool.setuptools]
packages = { find = { include = ["mlrbench", "mlrbench.*"] } }


